feat(frontend): added WEBHOOKS_IS_NOT_INSTALLED error stub

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Sie haben leider keinen Zugang zu diesem Raum",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Bitte versuchen Sie, Zugang zu beantragen",
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Erneut autorisieren",
   "button.settings": "Einstellungen",
   "button.create.room": "Raum erstellen",
@@ -27,6 +29,7 @@
   "button.change": "Ändern",
   "button.cancel": "Abbrechen",
   "button.save": "Speichern",
+  "button.reinstall": "",
   "button.request-access": "Zugang beantragen",
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar",
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
@@ -40,8 +43,6 @@
   "docspace.room.type.custom": "Benutzerdefinierter Raum",
   "error.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "link.learn-more": "Mehr erfahren",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die mit diesem Deal verbunden sind. Sie können den Raumtyp nicht ändern.",
