--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Lo sentimos, no tiene acceso a esta sala",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Por favor, intente solicitar acceso",
   "background.error.hint.admin.docspace-connection": "Por favor, acceda a la Configuración de conexión para configurar los ajustes de la aplicación ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Por favor, póngase en contacto con el administrador.",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Volver a autorizar",
   "button.settings": "Ajustes",
   "button.create.room": "Crear sala",
@@ -28,6 +30,7 @@
   "button.cancel": "Cancelar",
   "button.save": "Guardar",
   "button.request-access": "Solicitar acceso",
+  "button.reinstall": "",
   "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible",
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Sala personalizada",
   "error.common": "Algo ha salido mal. Por favor, vuelva a cargar la aplicación.",
   "link.learn-more": "Más información",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
   "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para trabajar con documentos relacionados con este acuerdo. No podrá cambiar el tipo de sala.",
