--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Malheureusement, vous n'avez pas accès à cette salle",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Veuillez essayer de demander un accès",
   "background.error.hint.admin.docspace-connection": "Veuillez consulter les paramètres de connexion pour configurer les paramètres de l'application ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Re-autoriser",
   "button.settings": "Paramètres",
   "button.create.room": "Créer une salle",
@@ -27,6 +29,7 @@
   "button.change": "Modifier",
   "button.cancel": "Annuler",
   "button.save": "Enregistrer",
+  "button.reinstall": "",
   "button.request-access": "Demander l'accès",
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible",
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Salle personnalisée",
   "error.common": "Un problème s'est produit. Veuillez recharger l'application.",
   "link.learn-more": "En savoir plus",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
   "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour travailler avec les documents liés à cette affaire. Vous ne pourrez pas modifier le type de salle.",
