--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Siamo spiacenti, non hai accesso a questa stanza",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Provare a richiedere l'accesso",
   "background.error.hint.admin.docspace-connection": "Accedi alle Impostazioni di connessione per configurare le impostazioni dell'app ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Riautorizza",
   "button.settings": "Impostazioni",
   "button.create.room": "Crea stanza",
@@ -27,6 +29,7 @@
   "button.change": "Cambia",
   "button.cancel": "Annulla",
   "button.save": "Salva",
+  "button.reinstall": "",
   "button.request-access": "Richiedi l'accesso",
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace",
   "docspace.error.login": "Autenticazione utente fallita",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Stanza personalizzata",
   "error.common": "Qualcosa è andato storto. Ricarica l'app.",
   "link.learn-more": "Per saperne di più",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
   "room.create.description": "Crea la stanza ONLYOFFICE DocSpace per lavorare con i documenti relativi a questo accordo. Non sarà possibile modificare il tipo di stanza",
