--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "申し訳ありませんが、このルームにはアクセスできません。",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "アクセスをリクエストしてください",
   "background.error.hint.admin.docspace-connection": "ONLYOFFICE DocSpace アプリの設定を行うには、接続設定に移動してください。",
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "再認証",
   "button.settings": "設定",
   "button.create.room": "ルームの作成",
@@ -27,6 +29,7 @@
   "button.change": "変更",
   "button.cancel": "キャンセル",
   "button.save": "保存",
+  "button.reinstall": "",
   "button.request-access": "アクセスをリクエストする",
   "docspace.error.unreached": "ONLYOFFICE DocSpace に接続できません",
   "docspace.error.login": "ユーザー認証に失敗しました",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "カスタムルーム",
   "error.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "link.learn-more": "詳しくはこちら",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件に関連するドキュメントを扱うためにONLYOFFICE DocSpaceルームを作成してください。ルームタイプを変更することはできませんので、ご注意ください。",
