--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Desculpe, você não tem acesso a esta sala",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Por favor, tente solicitar acesso",
   "background.error.hint.admin.docspace-connection": "Por favor, vá para a Configuração de conexão para configurar as configurações do aplicativo ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Reautorizar",
   "button.settings": "Configurações",
   "button.create.room": "Criar sala",
@@ -27,6 +29,7 @@
   "button.change": "Alterar",
   "button.cancel": "Cancelar",
   "button.save": "Salvar",
+  "button.reinstall": "",
   "button.request-access": "Solicitar acesso",
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado",
   "docspace.error.login": "Falha na autenticação do usuário",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Sala personalizada",
   "error.common": "Algo deu errado. Recarregue o aplicativo.",
   "link.learn-more": "Saiba mais",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
   "room.create.description": "Crie uma sala ONLYOFFICE DocSpace para trabalhar com documentos relacionados a este negócio. Você não poderá alterar o tipo de sala.",
