--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "К сожалению, у вас нет доступа к этой комнате",
   "background.error.title.not-available": "",
   "background.error.title.unreached": "",
+  "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
   "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Пожалуйста, попробуйте запросить доступ",
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
+  "background.error.hint.webhook.is-not-installed": "",
   "button.reauthorize": "Авторизуйтесь повторно",
   "button.settings": "Настройки",
   "button.create.room": "Создать комнату",
@@ -27,6 +29,7 @@
   "button.change": "Изменить",
   "button.cancel": "Отменить",
   "button.save": "Сохранить",
+  "button.reinstall": "",
   "button.request-access": "Запросить доступ",
   "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Пользовательская комната",
   "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
   "link.learn-more": "Узнать больше",
-  "notification.webhooks-is-not-active.header": "",
-  "notification.webhooks-is-not-active.text": "",
-  "notification.webhooks-is-not-active.help-text.admin": "",
-  "notification.webhooks-is-not-active.help-text.user": "",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
   "room.create.description": "Создайте комнату ONLYOFFICE DocSpace для работы с документами, связанными с этой сделкой. Вы не сможете изменить тип комнаты.",
