--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -6,6 +6,7 @@
   "background.error.title.no-room-access": "Sorry, you don't have access to this room",
   "background.error.title.not-available": "Not yet available",
   "background.error.title.unreached": "Cannot be reached",
+  "background.error.title.webhook.is-not-installed": "Synchronization Warning",
   "background.error.subtitle.common": "Could not fetch plugin settings. Please reload the Pipedrive window.",
   "background.error.subtitle.token-expired": "The document security token has expired. Please re-authorize the app.",
   "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App is not yet available",
@@ -17,6 +18,7 @@
   "background.error.subtitle.no-room-access": "Please try to request access",
   "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
+  "background.error.hint.webhook.is-not-installed": "The synchronization between Deal followers and Room members is not occurring due to a webhook malfunction.",
   "button.reauthorize": "Re-authorize",
   "button.settings": "Settings",
   "button.create.room": "Create room",
@@ -28,6 +30,7 @@
   "button.cancel": "Cancel",
   "button.save": "Save",
   "button.request-access": "Request access",
+  "button.reinstall": "Reinstall plugin",
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached",
   "docspace.error.login": "User authentication failed",
   "docspace.error.loading": "Error loading ONLYOFFICE DocSpace",
@@ -40,10 +43,6 @@
   "docspace.room.type.custom": "Custom room",
   "error.common": "Something went wrong. Please reload the app.",
   "link.learn-more": "Learn more",
-  "notification.webhooks-is-not-active.header": "Synchronization Warning",
-  "notification.webhooks-is-not-active.text": "Synchronization between Deal followers and Room members is not performed because no Deal Admin has installed the plugin",
-  "notification.webhooks-is-not-active.help-text.admin": "Please reinstall plugin",
-  "notification.webhooks-is-not-active.help-text.user": "Please contact with Deal Admin",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
   "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal. You will not be able to change the room type.",
