--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -17,7 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
   "button.reauthorize": "Erneut autorisieren",
-  "button.settings": "Einstellungen",
+  "button.settings": "",
   "button.create.room": "Raum erstellen",
   "button.login": "Anmelden",
   "button.logout": "Abmelden",
