--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -17,7 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "button.reauthorize": "Re-authorize",
-  "button.settings": "Settings",
+  "button.settings": "Go to Settings",
   "button.create.room": "Create room",
   "button.login": "Login",
   "button.logout": "Log out",
