--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -17,7 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
   "button.reauthorize": "Авторизуйтесь повторно",
-  "button.settings": "Настройки",
+  "button.settings": "",
   "button.create.room": "Создать комнату",
   "button.login": "Войти",
   "button.logout": "Выйти",
