--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -9,11 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar",
+  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace App ist noch nicht verfügbar.",
   "background.error.subtitle.plugin.not-active.help": "Bitte warten Sie, bis ein Pipedrive-Administrator die App-Einstellungen konfiguriert hat",
-  "background.error.subtitle.docspace-connection": "Es besteht keine Verbindung zu ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.message": "Kann keine Autorisierung in ONLYOFFICE DocSpace erhalten",
-  "background.error.subtitle.docspace-authorization.help": "Bitte gehen Sie zu den Autorisierungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren",
+  "background.error.subtitle.docspace-connection": "Es besteht keine Verbindung zu ONLYOFFICE DocSpace.",
   "background.error.subtitle.create-room": "Bitten Sie einen Pipedrive-Administrator, einen Raum zu erstellen, oder kontaktieren Sie einen DocSpace-Administrator, um Ihre Rolle zu erweitern.",
   "background.error.subtitle.no-room-access": "Bitte versuchen Sie, Zugang zu beantragen",
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
@@ -31,7 +29,7 @@
   "button.save": "Speichern",
   "button.reinstall": "",
   "button.request-access": "Zugang beantragen",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar.",
   "docspace.error.login": "Benutzerauthentifizierung fehlgeschlagen",
   "docspace.error.loading": "Fehler beim Laden von ONLYOFFICE DocSpace",
   "docspace.error.payment": "Das Erstellen dieses Raums ist nicht möglich, da das Limit für die Anzahl der Räume in Ihrem aktuellen Plan erreicht ist.",
