--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -9,11 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible",
+  "background.error.subtitle.plugin.not-active.message": "La aplicación ONLYOFFICE DocSpace todavía no está disponible.",
   "background.error.subtitle.plugin.not-active.help": "Por favor, espere hasta que un administrador de Pipedrive configure los ajustes de la aplicación.",
-  "background.error.subtitle.docspace-connection": "No está conectado a ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.message": "No se puede autorizar en ONLYOFFICE DocSpace",
-  "background.error.subtitle.docspace-authorization.help": "Por favor, acceda a la Configuración de autorización para configurar los ajustes de la aplicación ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-connection": "No está conectado a ONLYOFFICE DocSpace.",
   "background.error.subtitle.create-room": "Por favor, pida a un administrador de Pipedrive que cree una sala o contacte con un administrador de DocSpace para actualizar su rol.",
   "background.error.subtitle.no-room-access": "Por favor, intente solicitar acceso",
   "background.error.hint.admin.docspace-connection": "Por favor, acceda a la Configuración de conexión para configurar los ajustes de la aplicación ONLYOFFICE DocSpace.",
@@ -31,7 +29,7 @@
   "button.save": "Guardar",
   "button.request-access": "Solicitar acceso",
   "button.reinstall": "",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible.",
   "docspace.error.login": "Error de autenticación de usuario",
   "docspace.error.loading": "Error al cargar ONLYOFFICE DocSpace",
   "docspace.error.payment": "No es posible crear esta sala ya que se ha alcanzado el límite para el número de salas incluidas en su plan actual.",
