--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -9,9 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile",
+  "background.error.subtitle.plugin.not-active.message": "L'app ONLYOFFICE DocSpace non è ancora disponibile.",
   "background.error.subtitle.plugin.not-active.help": "Attendere finché un amministratore Pipedrive non configura le impostazioni dell'app",
-  "background.error.subtitle.docspace-connection": "Non sei connesso a ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-connection": "Non sei connesso a ONLYOFFICE DocSpace.",
   "background.error.subtitle.docspace-authorization.message": "Impossibile ottenere l'autorizzazione in ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Vai alle impostazioni di autorizzazione per configurare le impostazioni dell'app ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Chiedi a un amministratore di Pipedrive di creare una stanza o contatta un amministratore di DocSpace per aggiornare il tuo ruolo.",
@@ -29,9 +29,9 @@
   "button.change": "Cambia",
   "button.cancel": "Annulla",
   "button.save": "Salva",
-  "button.reinstall": "",
   "button.request-access": "Richiedi l'accesso",
-  "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace",
+  "button.reinstall": "",
+  "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace.",
   "docspace.error.login": "Autenticazione utente fallita",
   "docspace.error.loading": "Errore durante il caricamento di ONLYOFFICE DocSpace",
   "docspace.error.payment": "Non è possibile creare la stanza. È stato raggiunto il limite del numero di stanze incluse nel tuo piano attuale.",
