--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -9,9 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно",
+  "background.error.subtitle.plugin.not-active.message": "Приложение ONLYOFFICE DocSpace недоступно.",
   "background.error.subtitle.plugin.not-active.help": "Пожалуйста, подождите, когда администратор Pipedrive настроит приложение",
-  "background.error.subtitle.docspace-connection": "Вы не подключены к ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-connection": "Вы не подключены к ONLYOFFICE DocSpace.",
   "background.error.subtitle.docspace-authorization.message": "Не удается авторизоваться в ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Пожалуйста, перейдите к настройкам авторизации, чтобы настроить приложение",
   "background.error.subtitle.create-room": "Пожалуйста, попросите администратора Pipedrive создать комнату или свяжитесь с администратором DocSpace для обновления вашей роли.",
@@ -29,9 +29,9 @@
   "button.change": "Изменить",
   "button.cancel": "Отменить",
   "button.save": "Сохранить",
-  "button.reinstall": "",
   "button.request-access": "Запросить доступ",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен",
+    "button.reinstall": "",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен.",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
   "docspace.error.loading": "Ошибка загрузки ONLYOFFICE DocSpace",
   "docspace.error.payment": "Комната не может быть создана, поскольку достигнут лимит на количество комнат, включенных в ваш текущий тарифный план.",
