--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -9,9 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible",
+  "background.error.subtitle.plugin.not-active.message": "L'application ONLYOFFICE DocSpace n'est pas encore disponible.",
   "background.error.subtitle.plugin.not-active.help": "Veuillez patienter jusqu'à ce qu'un administrateur Pipedrive configure les paramètres de l'application",
-  "background.error.subtitle.docspace-connection": "Vous n'êtes pas connecté à ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-connection": "Vous n'êtes pas connecté à ONLYOFFICE DocSpace.",
   "background.error.subtitle.docspace-authorization.message": "Impossible d'obtenir une autorisation dans ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Veuillez vous rendre sur la page des paramètres d'autorisation pour configurer les paramètres de l'application ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Veuillez demander à un administrateur Pipedrive de créer une salle ou contacter un administrateur DocSpace pour augmenter votre rôle.",
@@ -29,9 +29,9 @@
   "button.change": "Modifier",
   "button.cancel": "Annuler",
   "button.save": "Enregistrer",
-  "button.reinstall": "",
   "button.request-access": "Demander l'accès",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible",
+  "button.reinstall": "",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible.",
   "docspace.error.login": "Échec de l'authentification de l'utilisateur",
   "docspace.error.loading": "Erreur de chargement d'ONLYOFFICE DocSpace",
   "docspace.error.payment": "La création de cette salle n'est pas possible puisque la limite est atteinte pour le nombre de salles incluses dans votre plan actuel.",
