--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -9,9 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "ONLYOFFICE DocSpace アプリはまだ利用できません",
+  "background.error.subtitle.plugin.not-active.message": "",
   "background.error.subtitle.plugin.not-active.help": "Pipedrive 管理者によってアプリ設定が構成されるまでお待ちください",
-  "background.error.subtitle.docspace-connection": "ONLYOFFICE DocSpace に接続されていません",
+  "background.error.subtitle.docspace-connection": "",
   "background.error.subtitle.docspace-authorization.message": "ONLYOFFICE DocSpace で承認を取得できません",
   "background.error.subtitle.docspace-authorization.help": "ONLYOFFICE DocSpace アプリの設定を構成するには、承認設定に移動してください",
   "background.error.subtitle.create-room": "ルームを作成するには、Pipedrive 管理者にお問い合わせいただくか、または、ロールをアップグレードするには、DocSpace 管理にお問い合わせください。",
@@ -29,9 +29,9 @@
   "button.change": "変更",
   "button.cancel": "キャンセル",
   "button.save": "保存",
-  "button.reinstall": "",
   "button.request-access": "アクセスをリクエストする",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace に接続できません",
+  "button.reinstall": "",
+  "docspace.error.unreached": "",
   "docspace.error.login": "ユーザー認証に失敗しました",
   "docspace.error.loading": "ONLYOFFICE DocSpace の読み込みエラー",
   "docspace.error.payment": "現在ご契約中のプランのルーム数が上限に達しているため、このルームの作成はできません。",
