--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -9,9 +9,9 @@
   "background.error.title.webhook.is-not-installed": "",
   "background.error.subtitle.common": "",
   "background.error.subtitle.token-expired": "",
-  "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível",
+  "background.error.subtitle.plugin.not-active.message": "O aplicativo ONLYOFFICE DocSpace ainda não está disponível.",
   "background.error.subtitle.plugin.not-active.help": "Aguarde até que um administrador do Pipedrive configure as configurações do aplicativo",
-  "background.error.subtitle.docspace-connection": "Você não está conectado ao ONLYOFFICE DocSpace",
+  "background.error.subtitle.docspace-connection": "Você não está conectado ao ONLYOFFICE DocSpace.",
   "background.error.subtitle.docspace-authorization.message": "Não é possível obter autorização no ONLYOFFICE DocSpace",
   "background.error.subtitle.docspace-authorization.help": "Vá para a Configuração de autorização para configurar as configurações do aplicativo ONLYOFFICE DocSpace",
   "background.error.subtitle.create-room": "Peça a um administrador do Pipedrive para criar uma sala ou entre em contato com um administrador do DocSpace para atualizar sua função.",
@@ -29,9 +29,9 @@
   "button.change": "Alterar",
   "button.cancel": "Cancelar",
   "button.save": "Salvar",
-  "button.reinstall": "",
   "button.request-access": "Solicitar acesso",
-  "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado",
+  "button.reinstall": "",
+  "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado.",
   "docspace.error.login": "Falha na autenticação do usuário",
   "docspace.error.loading": "Erro ao carregar o ONLYOFFICE DocSpace",
   "docspace.error.payment": "Não é possível criar esta sala, pois o limite foi atingido para o número de salas incluídas no seu plano atual.",
